@@ -1,7 +1,10 @@
 "Analog Compass" 
 
+2010-05-26
+ * Chinese translation by Jacky Huang
+
 2009-09-11 dieter
- * Wiki
+ * Wiki http://code.google.com/p/android-ac/w/list
 
 2009-09-09 dieter (version 0.9.1)
  * generate bitmaps (save storage, flexible)
